# NordInvest

./: .env.sample  .gitignore  .pre-commit-config.yaml  404.html  CLAUDE.md  CNAME  FULL_MARKET_ANALYSIS_SETUP.md  FUNDAMENTAL_ANALYSIS_IMPLEMENTATION.md  LICENSE  MARKET_CONFIG_GUIDE.md  MARKET_TICKERS.py  PHASE_6_SUMMARY.md  QUICK_START_FULL_MARKET.md  README.md  index.html  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  coverage.yml  pr-tests.yml  publish-website.yml
about/: index.html
config/: default.yaml
cron_jobs/: download_prices.sh  run_analysis.sh
data/: .gitignore
docs/: ARCHITECTURE_ANALYSIS.md  CLI_GUIDE.md  FULL_MARKET_ANALYSIS_SETUP.md  LLM_CONFIGURATION.md  MARKET_CONFIG_GUIDE.md  QUICK_START_FULL_MARKET.md  STRUCTURED_OUTPUT_SOLUTION.md  WEBSITE.md  analyze_workflow.mermaid  architecture.mermaid  branch_protection_guide.md  ci_cd_setup.md  llm_cli_guide.md  llm_integration.md  roadmap.md
reports/: index.html
reports/2025-12-10/: index.html
reports/2025-12-11/: index.html
reports/2025-12-12/: index.html
reports/2025-12-19/: index.html
scripts/: deploy_website.sh  test_normalizer_parsing.py  verify_agent_execution.py
search/: search_index.json
src/: MARKET_TICKERS.py  __init__.py  main.py  pipeline.py
src/agents/: __init__.py  ai_technical_agent.py  analysis.py  base.py  crew.py  crewai_agents.py  hybrid.py  output_models.py  scanner.py  sentiment.py
src/analysis/: __init__.py  allocation.py  fundamental.py  metadata_extractor.py  metrics.py  models.py  normalizer.py  report.py  risk.py  signal_creator.py  technical_indicators.py
src/cache/: manager.py
src/cli/: __init__.py  app.py
src/config/: __init__.py  llm.py  schemas.py
src/data/: alpha_vantage.py  db.py  finnhub.py  fixture.py  historical.py  models.py  news_aggregator.py  normalization.py  portfolio.py  price_manager.py  provider_manager.py  providers.py  repository.py  screening.py  yahoo_finance.py
src/filtering/: __init__.py  orchestrator.py  strategies.py
src/llm/: __init__.py  integration.py  mock.py  prompts.py  token_tracker.py  tools.py
src/sentiment/: __init__.py  analyzer.py  finbert.py
src/tools/: __init__.py  analysis.py  base.py  fetchers.py  reporting.py
src/utils/: errors.py  llm_check.py  logging.py  resilience.py  scheduler.py
src/website/: __init__.py  generator.py  sanitizer.py
tags/: index.html
tags/2025-12-10/: index.html
tags/2025-12-11/: index.html
tags/2025-12-12/: index.html
tags/2025-12-19/: index.html
tags/ADBE/: index.html
tags/AEVA/: index.html
tags/AI/: index.html
tags/ALNY/: index.html
tags/ARWR/: index.html
tags/ASTS/: index.html
tags/AXON/: index.html
tags/BLNK/: index.html
tags/BMY/: index.html
tags/CFLT/: index.html
tags/CHPT/: index.html
tags/CPNG/: index.html
tags/CRM/: index.html
tags/CVNA/: index.html
tags/DLR/: index.html
tags/EL/: index.html
tags/EVGO/: index.html
tags/INSP/: index.html
tags/INTC/: index.html
tags/INVZ/: index.html
tags/LAZR/: index.html
tests/: test_main.py
tickers/: index.html
website/: mkdocs.yml
(+165 files in other folders)
