[project]
name = "nordinvest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai>=1.6.0",
    "crewai-tools>=1.6.0",
    "langchain>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "langchain-openai>=0.1.0",
    "langchain-community>=0.0.20",
    "loguru>=0.7.3",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "requests>=2.31.0",
    "typer>=0.20.0",
    "yfinance>=0.2.32",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "notebook>=7.5.0",
    "poethepoet>=0.38.0",
    "pre-commit>=4.5.0",
    "pytest>=9.0.1",
    "ruff>=0.14.6",
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# Ignore logging f-string interpolation warning (G004)
ignore = ["G004"]

# Poethepoet task definitions
# Usage: uv run poe <task>
[tool.poe.tasks]
lint = "sh -c 'ruff check --select I --select F401 --fix && ruff format && black .'"
pre-commit = "pre-commit run --all-files"
