[project]
name = "nordinvest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai>=1.6.0",
    "crewai-tools>=1.6.0",
    "langchain>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "langchain-openai>=0.1.0",
    "langchain-community>=0.0.20",
    "loguru>=0.7.3",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "requests>=2.31.0",
    "typer>=0.20.0",
    "yfinance>=0.2.32",
    "langchain-ollama>=1.0.0",
    "litellm>=1.80.7",
    "sqlmodel>=0.0.27",
    "torch>=2.9.1",
    "transformers>=4.57.3",
    "pandas-ta>=0.4.71b0",
]

[dependency-groups]
dev = [
    "notebook>=7.5.0",
    "poethepoet>=0.38.0",
    "pre-commit>=4.5.0",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.6",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# Ignore logging f-string interpolation warning (G004)
ignore = ["G004"]
select = [
  "F",        # Pyflakes (unused stuff)
  "E", "W",   # Pycodestyle
  "B",        # Bugbear
  "I",        # Import sorting
  "ARG",      # Unused arguments
  "PLC0415",  # Import outside top-level (INLINE IMPORTS)
]

[tool.pytest.ini_options]
markers = [
    "unit: Unit tests that test individual components in isolation",
    "integration: Integration tests that test component interactions",
]
filterwarnings = [
    "ignore::ImportWarning",
    "ignore::DeprecationWarning:litellm.*",
]

# Poethepoet task definitions
# Usage: uv run poe <task>
[tool.poe.tasks]
lint = "sh -c 'ruff check --select I --select F401 --fix && ruff format'"
pre-commit = "pre-commit run --all-files"
rmpycache = "find . -type d -name '__pycache__' -exec rm -rf {} +"
rmdatacache = "find data/cache -name '*.json' -exec rm -f {} +"
rmreports = "find data/reports -name '*.md' -exec rm -f {} +"
verify-agent-execution = "python scripts/verify_agent_execution.py data/llm_debug"
